<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundIMC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_o_bmi_calculator"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32sp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/CVFMale"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/CVFemale"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/colorIMC"
        android:layout_marginTop="32sp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_male_24"
                android:contentDescription="@string/male_icon"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/letterGrey"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CVFemale"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toEndOf="@id/CVFMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/colorIMC"
        android:layout_marginTop="32sp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
        >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_female_24"
                android:contentDescription="@string/female_icon"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/letterGrey"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CVheight"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/CVFMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/darkGrey"
        android:layout_marginTop="32sp"
        android:layout_marginHorizontal="10sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/letterGrey">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom|center">
                <TextView
                    android:id="@+id/TextViewHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"

                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/TextViewCentimeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Centimeters"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
                <SeekBar
                    android:id="@+id/SBheight"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:max="250"
                    android:min="100"
                    />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CVweight"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/CVheight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/CVage"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/darkGrey"
        android:layout_marginTop="32sp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="WEIGHT"
                android:textColor="@color/letterGrey"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/TextViewWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="70"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonWeightRes"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/roundedbutton"
                    app:backgroundTint="@color/buttonGrey"
                    android:text="@string/menos"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    />

                <Button
                    android:id="@+id/buttonWeigthSum"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/roundedbutton"
                    app:backgroundTint="@color/buttonGrey"
                    android:text="+"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CVage"
        android:layout_width="0dp"
        android:layout_height="180sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/CVheight"
        app:layout_constraintStart_toEndOf="@id/CVweight"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16sp"
        app:cardBackgroundColor="@color/darkGrey"
        android:layout_marginTop="32sp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/letterGrey"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/TextViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/buttonAgeRes"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/roundedbutton"
                        app:backgroundTint="@color/buttonGrey"
                        android:text="@string/menos"
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        />

                    <Button
                        android:id="@+id/buttonAgeSum"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/roundedbutton"
                        app:backgroundTint="@color/buttonGrey"
                        android:text="+"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        />

                </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/purple"
        android:text="@string/calculate"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="top|center"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
